@@ -24,6 +24,7 @@
  * \ingroup applications
  */
 
+#include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
